loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:10: error: not found: value advance
advance(); 
^